syntax = "proto3";

package usuario;

service UsuarioService {
    rpc CreateUsuario (CreateUsuarioRequest) returns (Usuario) {}
    rpc GetUsuario (GetUsuarioRequest) returns (Usuario) {}
    rpc ListUsuarios (ListUsuariosRequest) returns (ListUsuariosResponse) {}
    rpc UpdateUsuario (UpdateUsuarioRequest) returns (Usuario) {}
    rpc DeleteUsuario (DeleteUsuarioRequest) returns (DeleteUsuarioResponse) {}
}

message Usuario {
    int32 usuario_id = 1;
    int32 persona_id = 2;
    string username = 3;
    string passwordHash = 4;
    bool esActivo = 5;
    bool esSuperAdmin = 6;
    string createdAt = 7;
    string updatedAt = 8;
}

message CreateUsuarioRequest {
    int32 personaId = 1;
    string username = 2;
    string passwordHash = 3;
    bool esActivo = 4;
    bool esSuperAdmin = 5;
}

message GetUsuarioRequest {
    int32 usuarioId = 1;
}

message ListUsuariosRequest {
    int32 page = 1;
    int32 limit = 2;
    string search = 3;
}

message ListUsuariosResponse {
    repeated Usuario usuarios = 1;
    int32 total = 2;
}

message UpdateUsuarioRequest {
    int32 usuarioId = 1;
    int32 personaId = 2;
    string username = 3;
    string passwordHash = 4;
    bool esActivo = 5;
    bool esSuperAdmin = 6;
}

message DeleteUsuarioRequest {
    int32 usuarioId = 1;
}

message DeleteUsuarioResponse {
    bool success = 1;
}
